--- a/DogPound/pom.xml
+++ b/DogPound/pom.xml
@@ -15,6 +15,10 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-maven-plugin</artifactId>
+        </plugin>
     </plugins>
   </build>
   <packaging>jar</packaging>
@@ -22,9 +26,10 @@
   <name>dogpounddomain</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
+ <!-- <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+
+  </properties>-->
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -43,51 +48,6 @@
       <version>4.1.4.RELEASE</version>
     </dependency>
 
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>RELEASE</version>
-    </dependency>
-      <dependency>
-          <groupId>za.ac.cput.dogpounddomain</groupId>
-          <artifactId>dogpounddomain</artifactId>
-          <version>1.0-SNAPSHOT</version>
-      </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    <dependency>
-      <groupId>za.ac.cput.dogpounddomain</groupId>
-      <artifactId>dogpounddomain</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
     <dependency>
       <groupId>za.ac.cput.dogpounddomain</groupId>
       <artifactId>dogpounddomain</artifactId>
@@ -198,5 +158,6 @@
       <version>3.4</version>
     </dependency>
   </dependencies>
+
 
 </project>
